@@ -41,11 +41,12 @@ https://github.com/elastic/beats/compare/1.0.0...master[Check the HEAD diff]
 ==== Added
 
 *Affecting all Beats*
+- Make logstash output compression level configurable. {pull}630[630]
 
 *Packetbeat*
 
 *Topbeat*
-- group all cpu usage per core statistics and export them optionally if cpu_per_core is configured {pull}496[496]
+- Group all cpu usage per core statistics and export them optionally if cpu_per_core is configured {pull}496[496]
 
 *Filebeat*
 - Add multiline support for combining multiple related lines into one event. {issue}461[461]
